--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,24 +9,72 @@
             <!-- Item 1 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/apple.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-                <div class="absolute top-75 start-50 p-4 ">
-                    how to define a mobile app
+                <div class="absolute p-4 w-50 bg-opacity-25 shadow-sm bg-dark text-white rounded-md" style="top: 80px; left: 80px">
+                    <p class="text-md text-uppercase">
+                        apple
+                    </p>
+                    <h1>
+                        Pro. Beyond.
+                    </h1>
+                    <p class="font-semibold text-sm mt-4">
+                        Built‑in features designed for you to make something wonderful. For everything and everyone. Switching to iPhone is super simple.
+                    </p>
+                    <a href="#" class="btn mt-4 py-2 px-3 mx-auto text-white rounded-full hover:bg-black cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content; border: 1px solid #fff">
+                        View More 🡥
+                    </a>
                 </div>
             </div>
             <!-- Item 2 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/samsung.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-                <div class="absolute top-75 start-50 p-4 bg-transparent">
-                    how to define a shopping app
+                <div class="absolute p-4 w-50 bg-opacity-25 shadow-sm bg-dark text-white rounded-md" style="top: 80px; left: 80px">
+                    <p class="text-md text-uppercase">
+                        samsung
+                    </p>
+                    <h1>
+                        Taking the lead in tech innovation
+                    </h1>
+                    <p class="font-semibold text-sm mt-4">Samsung Electronics constantly reinvents the future. We explore the unknown to discover technologies to help people all over the world lead happier, healthier lives.</p>
+                    <a href="#" class="btn mt-4 py-2 px-3 mx-auto text-white rounded-full hover:bg-black cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content; border: 1px solid #fff">
+                        View More 🡥
+                    </a>
                 </div>
             </div>
             <!-- Item 3 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/oppo.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+                <div class="absolute p-4 w-50 bg-opacity-25 shadow-sm bg-dark text-white rounded-md" style="top: 80px; left: 80px">
+                    <p class="text-md text-uppercase">
+                        oppo
+                    </p>
+                    <h1>
+                        Inspiration Ahead
+                    </h1>
+                    <p class="font-semibold text-sm mt-4">
+                        We hope to empower them and elevate the society with innovation and technology, and to make a difference and to find inspiration ahead.
+                    </p>
+                    <a href="#" class="btn mt-4 py-2 px-3 mx-auto text-white rounded-full hover:bg-black cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content; border: 1px solid #fff">
+                        View More 🡥
+                    </a>
+                </div>
             </div>
             <!-- Item 4 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/google.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+                <div class="absolute p-4 w-50 bg-opacity-25 shadow-sm bg-dark text-white rounded-md" style="top: 80px; left: 80px">
+                    <p class="text-md text-uppercase">
+                        google
+                    </p>
+                    <h1>
+                        Fresh deals are blooming this spring.
+                    </h1>
+                    <p class="font-semibold text-sm mt-4">
+                        Upgrade and save on Pixel 7 Pro, Pixel Buds, the Pixel Watch, and more.
+                    </p>
+                    <a href="#" class="btn mt-4 py-2 px-3 mx-auto text-white rounded-full hover:bg-black cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content; border: 1px solid #fff">
+                        View More 🡥
+                    </a>
+                </div>
             </div>
         </div>
         <!-- Slider indicators -->
@@ -61,8 +109,7 @@
             Crafted in part with recycled glass and ocean-bound plastic,
             each phone comes in a recycled paper box.
         </div>
-        <div class="btn py-2 px-3 mx-auto
-        bg-black text-white rounded-full cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content;">
+        <div class="btn py-2 px-3 mx-autobg-black text-white rounded-full cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content;">
             View More 🡥
         </div>
     </div>
@@ -204,8 +251,8 @@
 
     @*samsunng-iphone*@
     <div class="grid grid-cols-2 my-5">
-        <img src="~/wwwroot/Images/Others/Group 51.png" href="@Url.Action("Search", "Home", new {id = 1})"/>
-        <img src="~/wwwroot/Images/Others/Group 52.png" href="@Url.Action("Search", "Home", new {id = 1})"/>
+        <img src="~/wwwroot/Images/Others/Group 51.png" href="@Url.Action("Search", "Home", new {id = 1})" />
+        <img src="~/wwwroot/Images/Others/Group 52.png" href="@Url.Action("Search", "Home", new {id = 1})" />
     </div>
 
     <div class="mx-auto w-50 mt-6">
