--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 
 
 </head>
-<body>
+<body class="subpixel-antialiased">
     <header class="flex-col">
         @*icon-bar*@
         <nav id="navbar">
