--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -251,8 +251,8 @@
 
     @*samsunng-iphone*@
     <div class="grid grid-cols-2 my-5">
-        <img src="~/wwwroot/Images/Others/Group 51.png" href="@Url.Action("Search", "Home", new {id = 1})" />
-        <img src="~/wwwroot/Images/Others/Group 52.png" href="@Url.Action("Search", "Home", new {id = 1})" />
+        <img src="~/wwwroot/Images/Others/Group 51.png" href="@Url.Action("Search", "Home", new {id = 1})" class="object-cover w-full"/>
+        <img src="~/wwwroot/Images/Others/Group 52.png" href="@Url.Action("Search", "Home", new {id = 1})" class="object-cover w-full"/>
     </div>
 
     <div class="mx-auto w-50 mt-6">
