--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -76,18 +76,20 @@
 
     <div class="flex w-full justify-between p-5">
         <div class="text-start">
-            <div class="text-lg font-bold my-4">SHOP</div>
+            <div class="text-lg font-medium my-4">SHOP</div>
             <ul class="list-unstyled mt-3 font-light text-sm">
                 <li class="mb-2">Apple</li>
                 <li class="mb-2">Samsung</li>
-                <li class="mb-2">Huawei</li>
-                <li class="mb-2">Xiaomi</li>
                 <li class="mb-2">Google</li>
                 <li class="mb-2">Oppo</li>
             </ul>
+            <div class="mt-4 font-semibold text-sm flex">
+                <input type="text" class="border-b py-2 pl-3 mr-4 text-xs" placeholder="Enter your email" />
+                <div class="bg-black py-2 px-3 text-uppercase rounded-md text-white font-semibold text-xs">send</div>
+            </div>
         </div>
         <div class="text-start">
-            <div class="text-lg font-bold my-4">SUPPORT</div>
+            <div class="text-lg font-medium my-4">SUPPORT</div>
             <ul class="list-unstyled mt-3 font-light text-sm">
                 <li class="mb-2">Product Support</li>
                 <li class="mb-2">Order Support</li>
@@ -98,7 +100,7 @@
             </ul>
         </div>
         <div class="text-start">
-            <div class="text-lg font-bold my-4">SOCIAL</div>
+            <div class="text-lg font-medium my-4">SOCIAL</div>
             <ul class="list-unstyled mt-3 font-light text-sm">
                 <li class="mb-2">Twitter</li>
                 <li class="mb-2">Facebook</li>
@@ -106,7 +108,7 @@
             </ul>
         </div>
         <div class="text-start">
-            <div class="text-lg font-bold my-4">MEMBERS</div>
+            <div class="text-lg font-medium my-4">MEMBERS</div>
             <ul class="list-unstyled mt-3 font-light text-sm">
                 <li class="mb-2">Tran Hien Thao</li>
                 <li class="mb-2">Pham Thieu Chau</li>
