--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
 }
+@model List<WebApplication1.Models.product>
 <main>
     @*carousel*@
     <div id="default-carousel" class="relative" data-carousel="slide">
@@ -9,72 +11,27 @@
             <!-- Item 1 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/apple.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-                <div class="absolute p-4 w-50 bg-opacity-25 shadow-sm bg-dark text-white rounded-md" style="top: 80px; left: 80px">
-                    <p class="text-md text-uppercase">
-                        apple
-                    </p>
-                    <h1>
-                        Pro. Beyond.
-                    </h1>
-                    <p class="font-semibold text-sm mt-4">
-                        Built‑in features designed for you to make something wonderful. For everything and everyone. Switching to iPhone is super simple.
-                    </p>
-                    <a href="#" class="btn mt-4 py-2 px-3 mx-auto text-white rounded-full hover:bg-black cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content; border: 1px solid #fff">
-                        View More 🡥
-                    </a>
-                </div>
             </div>
             <!-- Item 2 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/samsung.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-                <div class="absolute p-4 w-50 bg-opacity-25 shadow-sm bg-dark text-white rounded-md" style="top: 80px; left: 80px">
-                    <p class="text-md text-uppercase">
-                        samsung
-                    </p>
-                    <h1>
-                        Taking the lead in tech innovation
-                    </h1>
-                    <p class="font-semibold text-sm mt-4">Samsung Electronics constantly reinvents the future. We explore the unknown to discover technologies to help people all over the world lead happier, healthier lives.</p>
-                    <a href="#" class="btn mt-4 py-2 px-3 mx-auto text-white rounded-full hover:bg-black cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content; border: 1px solid #fff">
-                        View More 🡥
-                    </a>
-                </div>
             </div>
             <!-- Item 3 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                <img src="~/wwwroot/Images/Slides/oppo.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-                <div class="absolute p-4 w-50 bg-opacity-25 shadow-sm bg-dark text-white rounded-md" style="top: 80px; left: 80px">
-                    <p class="text-md text-uppercase">
-                        oppo
-                    </p>
-                    <h1>
-                        Inspiration Ahead
-                    </h1>
-                    <p class="font-semibold text-sm mt-4">
-                        We hope to empower them and elevate the society with innovation and technology, and to make a difference and to find inspiration ahead.
-                    </p>
-                    <a href="#" class="btn mt-4 py-2 px-3 mx-auto text-white rounded-full hover:bg-black cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content; border: 1px solid #fff">
-                        View More 🡥
-                    </a>
-                </div>
+                <img src="~/wwwroot/Images/Slides/huawei.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
             </div>
             <!-- Item 4 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                <img src="~/wwwroot/Images/Slides/xiaomi.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+            </div>
+            <!-- Item 5 -->
+            <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/google.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-                <div class="absolute p-4 w-50 bg-opacity-25 shadow-sm bg-dark text-white rounded-md" style="top: 80px; left: 80px">
-                    <p class="text-md text-uppercase">
-                        google
-                    </p>
-                    <h1>
-                        Fresh deals are blooming this spring.
-                    </h1>
-                    <p class="font-semibold text-sm mt-4">
-                        Upgrade and save on Pixel 7 Pro, Pixel Buds, the Pixel Watch, and more.
-                    </p>
-                    <a href="#" class="btn mt-4 py-2 px-3 mx-auto text-white rounded-full hover:bg-black cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content; border: 1px solid #fff">
-                        View More 🡥
-                    </a>
-                </div>
+            </div>
+            <!-- Item 5 -->
+            <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                <img src="~/wwwroot/Images/Slides/oppo.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+
             </div>
         </div>
         <!-- Slider indicators -->
@@ -83,6 +40,8 @@
             <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
             <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
             <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
+            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
+            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 6" data-carousel-slide-to="5"></button>
         </div>
         <!-- Slider controls -->
         <button type="button" class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
@@ -109,7 +68,8 @@
             Crafted in part with recycled glass and ocean-bound plastic,
             each phone comes in a recycled paper box.
         </div>
-        <div class="btn py-2 px-3 mx-autobg-black text-white rounded-full cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content;">
+        <div class="btn py-2 px-3 mx-auto
+        bg-black text-white rounded-full cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content;">
             View More 🡥
         </div>
     </div>
@@ -119,143 +79,53 @@
     @*product-mini-list*@
 
     <div class="grid grid-cols-4 gap-4 justify-content-between mx-auto mt-lg-5 px-4">
-        <div class="flex justify-center text-md">
-            <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                <a href="#!">
-                    <img class="rounded-t-lg"
-                         src="https://tecdn.b-cdn.net/img/new/standard/nature/184.jpg"
-                         alt="" />
-                </a>
-                <div class="p-3 font-medium">
-                    <div class="flex flex-row justify-between pb-3 border-bottom">
-                        <p>$0.00</p>
-                        <div class="flex flex-row">
-                            <p class="px-2">5.0</p>
-                            <i class="fa-solid fa-star text-warning"></i>
+        @foreach (var item in Model)
+        {
+            if (item.id_product < 5)
+            {
+                <div class="flex justify-center text-md">
+                    <div class="block max-w-sm rounded-lg bg-white shadow-lg">
+                        <a href="#">
+                            <img class="rounded-t-lg"
+                                 src="https://tecdn.b-cdn.net/img/new/standard/nature/184.jpg"
+                                 alt="" />
+                        </a>
+                        <div class="p-3 font-medium">
+                            <div class="flex flex-row justify-between pb-3 border-bottom">
+                                <p>@Html.DisplayFor(modelItem => item.price)</p>
+                                <div class="flex flex-row">
+                                    <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                </div>
+                            </div>
+
+                            <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
+                                @Html.DisplayFor(modelItem => item.names)
+                            </h5>
+                            <p class="mb-4   text-neutral-500 font-light">
+                                <div class="mb-2">@Html.DisplayFor(modelItem => item.color)</div>
+                                <div class="mb-2">@Html.DisplayFor(modelItem => item.ram)</div>
+                            </p>
+                            <div class="flex flex-row justify-between align-items-center font-semibold">
+                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/ShoppingCart/AddToCart/@item.id_product">
+                                    Buy
+                                </a>
+                                <a href="" class="text-blue-600 font-light">Learn More 🡥</a>
+                            </div>
                         </div>
                     </div>
-
-                    <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                        Product Name
-                    </h5>
-                    <p class="mb-4   text-neutral-500 font-light">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
-                            Buy
-                        </a>
-                        <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
-                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="flex justify-center text-md">
-            <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                <a href="#!">
-                    <img class="rounded-t-lg"
-                         src="https://tecdn.b-cdn.net/img/new/standard/nature/184.jpg"
-                         alt="" />
-                </a>
-                <div class="p-3 font-medium">
-                    <div class="flex flex-row justify-between pb-3 border-bottom">
-                        <p>$0.00</p>
-                        <div class="flex flex-row">
-                            <p class="px-2">5.0</p>
-                            <i class="fa-solid fa-star text-warning"></i>
-                        </div>
-                    </div>
-
-                    <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                        Product Name
-                    </h5>
-                    <p class="mb-4   text-neutral-500 font-light">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
-                            Buy
-                        </a>
-                        <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="flex justify-center text-md">
-            <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                <a href="#!">
-                    <img class="rounded-t-lg"
-                         src="https://tecdn.b-cdn.net/img/new/standard/nature/184.jpg"
-                         alt="" />
-                </a>
-                <div class="p-3 font-medium">
-                    <div class="flex flex-row justify-between pb-3 border-bottom">
-                        <p>$0.00</p>
-                        <div class="flex flex-row">
-                            <p class="px-2">5.0</p>
-                            <i class="fa-solid fa-star text-warning"></i>
-                        </div>
-                    </div>
-
-                    <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                        Product Name
-                    </h5>
-                    <p class="mb-4   text-neutral-500 font-light">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
-                            Buy
-                        </a>
-                        <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="flex justify-center text-md">
-            <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                <a href="#!">
-                    <img class="rounded-t-lg"
-                         src="https://tecdn.b-cdn.net/img/new/standard/nature/184.jpg"
-                         alt="" />
-                </a>
-                <div class="p-3 font-medium">
-                    <div class="flex flex-row justify-between pb-3 border-bottom">
-                        <p>$0.00</p>
-                        <div class="flex flex-row">
-                            <p class="px-2">5.0</p>
-                            <i class="fa-solid fa-star text-warning"></i>
-                        </div>
-                    </div>
-
-                    <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                        Product Name
-                    </h5>
-                    <p class="mb-4   text-neutral-500 font-light">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
-                            Buy
-                        </a>
-                        <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+            }
+        }
     </div>
 
     @*samsunng-iphone*@
-    <div class="grid grid-cols-2 my-5">
-        <img src="~/wwwroot/Images/Others/Group 51.png" href="@Url.Action("Search", "Home", new {id = 1})" class="object-cover w-full"/>
-        <img src="~/wwwroot/Images/Others/Group 52.png" href="@Url.Action("Search", "Home", new {id = 1})" class="object-cover w-full"/>
+    <div class="grid grid-cols-2 my-4">
+        <img src="~/wwwroot/Images/Others/Group 51.png" />
+        <img src="~/wwwroot/Images/Others/Group 52.png" />
     </div>
 
-    <div class="mx-auto w-50 mt-6">
+    <div class="mx-auto w-75">
         <img src="~/wwwroot/Images/Others/Frame 32.png" class="object-cover object-center" />
     </div>
 
