--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -1,38 +1,45 @@
 ﻿@{
     ViewData["Title"] = "Cart";
 }
-<main class="p-4">
-    <div class="flex mb-6">
+<main class="p-6">
+    <div class="flex mb-lg-5">
         <div class="text-2xl font-bold">Shopping Cart</div>
         <div class="text-neutral-500 text-xs px-4">
-            (04 Items)
+            (01 Items)
         </div>
     </div>
-    <div class="grid grid-cols-4 p-4 mt-4 rounded-md border-1 shadow-sm">
-        <div class="col-span-3 pr-8 border-r">
+
+    <div class="row flex">
+        <div class="col-lg-9">
             @*header*@
-            <div class="grid grid-cols-4 mb-4 pb-3 border-b font-medium">
-                <div>Product</div>
-                <div class="pl-6">Price</div>
-                <div>Quantity</div>
-                <div></div>
+            <div class="row mb-4 pb-3 border-b font-medium">
+                <div class="col w-50">Product</div>
+                <div class="col">Price</div>
+                <div class="col">Quantity</div>
+                <div class="col"></div>
             </div>
+
             @*body*@
-            <div class="grid grid-cols-4 my-3 py-4 pr-4 rounded-md shadow-md">
-                <div class="col-span-1 flex">
+            <div class="row flex my-3 py-4 pr-4 shadow-sm">
+                @*Product*@
+                <div class="col flex flex-wrap w-50">
                     <img src="~/wwwroot/Images/Products/1.png"
                          class="h-20" />
-                    <div class="grid-rows-4">
+                    <div class="col grid-rows-4">
                         <div class="font-medium">iPhone 14</div>
                         <div class="font-light text-xs">Iphone</div>
                         <div class="font-light text-xs">Gold</div>
                         <a href="#" class="text-blue-600 font-semibold text-xs mt-4">Learn More 🡥</a>
                     </div>
                 </div>
-                <div class="col-span-1 pl-6 pt-4">
+
+                @*Price*@
+                <div class="col">
                     $39.23
                 </div>
-                <div class="col-span-1 pt-4">
+
+                @*Quantity*@
+                <div class="col">
                     <div class="flex">
                         <a href="#" class="text-center text-black py-1 px-2.5 bg-gray-100 hover:bg-gray-200 rounded-md">
                             <i class="fa-solid fa-minus text-xs"></i>
@@ -43,34 +50,103 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-span-1 pt-4">
-                    <div class="flex justify-content-end">
+
+                @*Remove/Check*@
+                <div class="col">
+                    <div class="flex justify-content-between">
                         <a href="#" class="bg-red-100 text-center py-1 px-2.5 hover:bg-red-200 rounded-md">
                             <i class="fa-solid fa-xmark text-red-600 text-xs"></i>
                         </a>
+                        <input type="checkbox" class="rounded-md border-gray-200 bg-white p-2" />
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-span-1 pl-4 gap-y-3">
-            <div class="gap-y-2">
-                <div class="font-medium mb-2">Apply Coupon</div>
-                <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
-                <div class="flex justify-center mt-3">
-                    <div class="relative mb-3 w-full" data-te-input-wrapper-init>
-                        <input type="text"
-                               class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                               id="exampleFormControlInputText"
-                               placeholder="Enter your promo code" />
-                        <label for="exampleFormControlInputText"
-                               class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                            Promo Code
-                        </label>
-                    </div>
+        @*Place Order*@
+        <div class="col-lg-3">
+            <div class="font-medium mb-2">Shipping Info</div>
+            <div class="text-gray-400 font-light text-xs">Fill your order</div>
+            @*Email*@
+            <div class="flex justify-center mt-2">
+                <div class="relative w-full" data-te-input-wrapper-init>
+                    <input type="text"
+                           class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                           id="exampleFormControlInputText"
+                           placeholder="Enter your email" />
+                    <label for="exampleFormControlInputText"
+                           class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
+                        Email
+                    </label>
                 </div>
             </div>
-            <div class="gap-y-3">
+
+            @*Phone*@
+            <div class="flex justify-center mt-2">
+                <div class="relative w-full" data-te-input-wrapper-init>
+                    <input type="text"
+                           class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                           id="exampleFormControlInputText"
+                           placeholder="Enter your phone number" />
+                    <label for="exampleFormControlInputText"
+                           class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
+                        Phone Number
+                    </label>
+                </div>
+            </div>
+
+            @*Address*@
+            <div class="flex justify-center mt-2">
+                <div class="relative w-full" data-te-input-wrapper-init>
+                    <input type="text"
+                           class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                           id="exampleFormControlInputText"
+                           placeholder="Enter your address" />
+                    <label for="exampleFormControlInputText"
+                           class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
+                        Address
+                    </label>
+                </div>
+            </div>
+
+            @*Card Number*@
+            <div class="flex justify-center my-2">
+                <div class="relative w-full mb-4" data-te-input-wrapper-init>
+                    <input type="text"
+                           class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                           id="exampleFormControlInputText"
+                           placeholder="Enter your card number" />
+                    <label for="exampleFormControlInputText"
+                           class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
+                        Paypal Card
+                    </label>
+                </div>
+            </div>
+
+            @*Promo Code*@
+            <div class="font-medium my-2">Apply Coupon</div>
+            <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
+
+            @*Enter promo-code*@
+            <div class="flex justify-center mt-2 mb-4 justify-between">
+                <div class="relative w-75" data-te-input-wrapper-init>
+                    <input type="text"
+                           class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                           id="exampleFormControlInputText"
+                           placeholder="Enter your promo code" />
+                    <label for="exampleFormControlInputText"
+                           class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
+                        Promo Code
+                    </label>
+                </div>
+
+                @*Apply Promo-Code*@
+                <a class="bg-yellow-300 py-2.5 px-3 text-black text-xs font-semibold ml-2 rounded-md" style="width:fit-content; height: fit-content;">Apply</a>
+            </div>
+
+
+            @*Order Sumamry*@
+            <div class="">
                 <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
                 <div class="d-flex justify-content-between my-2">
                     <p>Total</p>
@@ -82,15 +158,15 @@
                     <p>$0.00</p>
                 </div>
 
-                <div class="d-flex justify-content-between pb-2 mb-4 border-b">
+                <div class="d-flex justify-content-between pb-2 mb-2 border-b">
                     <p>Discount</p>
                     <p>$0.00</p>
                 </div>
-                <div class="d-flex justify-content-between my-4">
+                <div class="d-flex justify-content-between my-2">
                     <p>Subtotal</p>
                     <p>$0.00</p>
                 </div>
-                <a href="@Url.Action("Checkout", "Home")" class="btn btn-primary hover:bg-blue-800 w-full rounded-md text-center text-md font-medium py-2">Checkout</a>
+                <a href="@Url.Action("Checkout", "Home")" class="btn btn-primary hover:bg-blue-800 w-full rounded-md text-center text-md font-medium py-2 mt-2">Place Order</a>
             </div>
         </div>
     </div>
