--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -83,5 +83,6 @@
         </div>
         <script src="https://kit.fontawesome.com/6e08fcf7ad.js" crossorigin="anonymous"></script>
         <script src="https://cdn.tailwindcss.com"></script>
+    </div>
 </main>
 
