--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@model List<WebApplication1.Models.product>
 <main>
     @*carousel*@
     <div id="default-carousel" class="relative" data-carousel="slide">
@@ -119,134 +121,46 @@
     @*product-mini-list*@
 
     <div class="grid grid-cols-4 gap-4 justify-content-between mx-auto mt-lg-5 px-4">
-        <div class="flex justify-center text-md">
-            <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                <a href="#!">
-                    <img class="rounded-t-lg"
-                         src="https://tecdn.b-cdn.net/img/new/standard/nature/184.jpg"
-                         alt="" />
-                </a>
-                <div class="p-3 font-medium">
-                    <div class="flex flex-row justify-between pb-3 border-bottom">
-                        <p>$0.00</p>
-                        <div class="flex flex-row">
-                            <p class="px-2">5.0</p>
-                            <i class="fa-solid fa-star text-warning"></i>
+        @foreach (var item in Model)
+        {
+            if (item.id_product < 5)
+            {
+                <div class="flex justify-center text-md">
+                    <div class="block max-w-sm rounded-lg bg-white shadow-lg">
+                        <a href="#!">
+                            <img class="rounded-t-lg"
+                                 src="~/@Html.DisplayFor(modelItem => item.images)"
+                                 alt="" />
+                        </a>
+                        <div class="p-3 font-medium">
+                            <div class="flex flex-row justify-between pb-3 border-bottom">
+                                <p>$@Html.DisplayFor(modelItem => item.price)</p>
+                                <div class="flex flex-row">
+                                    <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
+                                    <i class="fa-solid fa-star text-warning"></i>
+                                </div>
+                            </div>
+
+                            <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
+                                @Html.DisplayFor(modelItem => item.names)
+                            </h5>
+                            <p class="mb-4   text-neutral-500 font-light">
+                                Some quick example text to build on the card title and make up the
+                                bulk of the card's content.
+                            </p>
+
+                            <div class="flex flex-row justify-between align-items-center font-semibold">
+                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Cart/Add_Items/@item.id_product">
+                                    Details
+                                </a>
+                                <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
+                            </div>
+
                         </div>
                     </div>
-
-                    <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                        Product Name
-                    </h5>
-                    <p class="mb-4   text-neutral-500 font-light">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
-                            Buy
-                        </a>
-                        <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
-                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="flex justify-center text-md">
-            <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                <a href="#!">
-                    <img class="rounded-t-lg"
-                         src="https://tecdn.b-cdn.net/img/new/standard/nature/184.jpg"
-                         alt="" />
-                </a>
-                <div class="p-3 font-medium">
-                    <div class="flex flex-row justify-between pb-3 border-bottom">
-                        <p>$0.00</p>
-                        <div class="flex flex-row">
-                            <p class="px-2">5.0</p>
-                            <i class="fa-solid fa-star text-warning"></i>
-                        </div>
-                    </div>
-
-                    <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                        Product Name
-                    </h5>
-                    <p class="mb-4   text-neutral-500 font-light">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
-                            Buy
-                        </a>
-                        <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="flex justify-center text-md">
-            <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                <a href="#!">
-                    <img class="rounded-t-lg"
-                         src="https://tecdn.b-cdn.net/img/new/standard/nature/184.jpg"
-                         alt="" />
-                </a>
-                <div class="p-3 font-medium">
-                    <div class="flex flex-row justify-between pb-3 border-bottom">
-                        <p>$0.00</p>
-                        <div class="flex flex-row">
-                            <p class="px-2">5.0</p>
-                            <i class="fa-solid fa-star text-warning"></i>
-                        </div>
-                    </div>
-
-                    <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                        Product Name
-                    </h5>
-                    <p class="mb-4   text-neutral-500 font-light">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
-                            Buy
-                        </a>
-                        <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="flex justify-center text-md">
-            <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                <a href="#!">
-                    <img class="rounded-t-lg"
-                         src="https://tecdn.b-cdn.net/img/new/standard/nature/184.jpg"
-                         alt="" />
-                </a>
-                <div class="p-3 font-medium">
-                    <div class="flex flex-row justify-between pb-3 border-bottom">
-                        <p>$0.00</p>
-                        <div class="flex flex-row">
-                            <p class="px-2">5.0</p>
-                            <i class="fa-solid fa-star text-warning"></i>
-                        </div>
-                    </div>
-
-                    <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
-                        Product Name
-                    </h5>
-                    <p class="mb-4   text-neutral-500 font-light">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
-                            Buy
-                        </a>
-                        <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+            }
+        }
     </div>
 
     @*samsunng-iphone*@
