--- a/Views/Home/Product.cshtml
+++ b/Views/Home/Product.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Product";
 }
-
+@model WebApplication1.Models.product
 <main>
     <div>
         <div class="text-xs">
@@ -12,8 +12,8 @@
             </div>
             <div class="w-75 grid grid-cols-4 grid-rows-2 mx-auto">
                 <div class="col-span-2 m-4">
-                        <img src="https://tailwindui.com/img/ecommerce-images/product-page-02-secondary-product-shot.jpg" 
-                             class="w-full object-cover object-center mb-3">
+                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-02-secondary-product-shot.jpg"
+                         class="w-full object-cover object-center mb-3">
                     <div>
                         <h3 class="font-medium text-gray-900">Highlights</h3>
 
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <div class="col-span-2 m-4 text-xs">
-                    <p class="text-lg font-bold">Basic Tee 6-Pack</p>
+                    <p class="text-lg font-bold">@Html.DisplayFor(model => model.names)</p>
                     <p class="text-3xl tracking-tight text-gray-900 mt-3">$192</p>
                     <!-- Reviews -->
                     <div class="mt-3">
@@ -57,7 +57,7 @@
                             <fieldset class="mt-2">
                                 <legend class="sr-only">Choose a color</legend>
                                 <div class="flex items-center space-x-3">
-                                    
+
                                     <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
                                         <input type="radio" name="color-choice" value="White" class="sr-only" aria-labelledby="color-choice-0-label">
                                         <span id="color-choice-0-label" class="sr-only"> White </span>
@@ -96,14 +96,16 @@
                         </div>
                         <button class="w-full py-3 rounded-md bg-gray-100 hover:bg-gray-200 mb-2 mt-6 font-medium">Add To Cart</button>
                         <button class="w-full py-3 rounded-md bg-blue-600 hover:bg-blue-700 text-light text-center font-medium">Buy</button>
-                        </form>
+                    </form>
                 </div>
                 <div class="col-span-2 m-4">
                     <div class="flex items-center mb-4 space-x-4">
                         <img class="w-10 h-10 rounded-full" src="https://tailwindui.com/img/ecommerce-images/product-page-02-secondary-product-shot.jpg" alt="">
                         <div class="space-y-1 font-medium dark:text-white">
-                            <p>Jese Leos <time datetime="2014-08-16 19:00" 
-                                class="block text-gray-500 dark:text-gray-400">Joined on August 2014</time></p>
+                            <p>
+                                Jese Leos <time datetime="2014-08-16 19:00"
+                                                class="block text-gray-500 dark:text-gray-400">Joined on August 2014</time>
+                            </p>
                         </div>
                     </div>
                     <div class="flex items-center mb-1">
