--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -19,18 +20,35 @@
         @*icon-bar*@
         <nav id="navbar">
             <nav class="relative px-4 py-2 flex justify-between items-center bg-white">
-                <a class="text-xl font-extrabold leading-none fst-italic text-black" href="#">
+                <a class="text-xl font-extrabold leading-none fst-italic text-black" href="/Home/Index">
                     W.REX
                 </a>
                 <div class="flex gap-2">
-                    @*Dashboard -- temp*@
-                    <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
-                       href="@Url.Action("Dashboard", "Home")"><i class="fa-solid fa-user text-black"></i></a>
 
-                    @*Cart*@
-                    <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
-                       href="@Url.Action("Cart", "Home")"><i class="fa-solid fa-cart-shopping text-black"></i></a>
+                    @if (Session["email"] != null)
+                    {
+                        @*Dashboard -- temp*@
+                        <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
+                           href="@Url.Action("Details_Info", "User", new {id = ((WebApplication1.Models.user)Session["email"]).id_user})">
+                            <i class="fa-solid fa-user text-black"></i>
+                            @(((WebApplication1.Models.user)Session["email"]).email)
+                        </a>
+                        @*Cart*@
+                        <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
+                           href="@Url.Action("Cart_User", "Cart", new {id = ((WebApplication1.Models.user)Session["email"]).id_user})"><i class="fa-solid fa-cart-shopping text-black"></i></a>
+                    }
+                    else if (Session["email"] == null)
+                    {
+                        <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
+                           href="@Url.Action("SignIn", "User")">
+                            <i class="fa-solid fa-user text-black"></i>
+                            SignIn
+                        </a>
 
+                        @*Cart*@
+                        <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
+                           href="@Url.Action("Cart_User", "Cart")"><i class="fa-solid fa-cart-shopping text-black"></i></a>
+                    }
                     @*Search*@
                     <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
                        href="@Url.Action("Search", "Home")"><i class="fa-solid fa-magnifying-glass text-black px-3"></i></a>
@@ -53,8 +71,8 @@
                     <li class="mb-3"><a href="@Url.Action("ProductList", "Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">EXPLORE</a></li>
                     <li class="mb-3"><a href="#" class="py-2 px-3 text-dark hover:italic hover:font-semibold">COMPARE</a></li>
                     <li class="mb-3"><a href="#" class="py-2 px-3 text-dark hover:italic hover:font-semibold">YOUR ORDERS</a></li>
-                    <li class="mb-3"><a href="@Url.Action("Signin", "Home")" class="py-2 px-3 text-dark hover:italic hover:font-semibold">ACCOUNT</a></li>
                     <li class="mb-3"> <a href="#" class="py-2 px-3 text-dark hover:italic hover:font-semibold">CHAT WITH US</a></li>
+                    <li class="mb-3"><a href="/User/Logout" class="py-2 px-3 text-dark hover:italic hover:font-semibold">LOGOUT</a></li>
                 </ul>
             </div>
         </nav>
@@ -66,12 +84,15 @@
             <div class="text-3xl font-bold mt-4 mb-2">What are you searching for?</div>
             <div class="font-light mb-4 text-md-center">Let's join with us and enjoy your aesthetic new-born discovery.</div>
 
-            <form class="mx-auto flex align-items-center ">
-                <input type="text" class="font-light text-gray-400 bg-white border-b py-2" style="padding-right: 300px" placeholder="  Search" />
-                <div class="p-2 mx-2 text-center font-light text-xs">
-                    <i class="fa-solid fa-search"></i>
-                </div>
-            </form>
+            @using (Html.BeginForm("SearchPage", "Home", FormMethod.Get))
+            {
+                <form class="mx-auto flex align-items-center ">
+                    <input type="text" name="searching" class="font-light text-gray-400 bg-white border-b py-2" style="padding-right: 300px" placeholder="  Search" />
+                    <div class="p-2 mx-2 text-center font-light text-xs">
+                        <i class="fa-solid fa-search"></i>
+                    </div>
+                </form>
+            }
 
         </nav>
 
