--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -150,7 +150,7 @@
                             </p>
 
                             <div class="flex flex-row justify-between align-items-center font-semibold">
-                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Cart/Add_Items/@item.id_product">
+                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Shopping/Details_Pro/@item.id_product">
                                     Details
                                 </a>
                                 <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
